--- a/asmapp/asm/templates/asm/electronicSupplies.html
+++ b/asmapp/asm/templates/asm/electronicSupplies.html
@@ -40,7 +40,7 @@ Gökmen Soysal Family Health Center Project
                          </a>
                      </li>
                      <li>
-                         <a class="nav-link" href="{% url 'MedicalSupplies' %}">
+                         <a class="nav-link" href="{% url 'medicalSupplies' %}">
                              <i class="nc-icon nc-notes"></i>
                              <p>Medical Supplies</p>
                          </a>
@@ -86,73 +86,30 @@ Gökmen Soysal Family Health Center Project
                         <div class="col-md-12">
                             <div class="card strpied-tabled-with-hover">
                                 <div class="card-header ">
-                                    <h4 class="card-title">Expenses of Electronic Supplies </h4>
+                                    <h4 class="card-title">Expenses and Quantity of Electronic Supplies </h4>
                                     <p class="card-category">Expenses of doctors in registered ASM</p>
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
                                     <table class="table table-hover table-striped">
                                         <thead>
-                                            <th>Buyer ID</th>
-                                            <th>Supply ID</th>
-                                            <th>Cost</th>
+                                            <th>Buyer</th>
+                                            <th>Supply Name</th>
                                             <th>Quantity</th>
-                                            <th>Date of Purchase</th>
+                                            <th>Total Price</th>
+                                            <th>Purchase Date</th>
                                         </thead>
                                         <tbody>
+
+                                            {% for electronicSupplies in electronicSupplies %}
                                             <tr>
-                                                <td>1001</td>
-                                                <td>3001</td>
-                                                <td>900</td>
-                                                <td>1</td>
-                                                <td>12.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1004</td>
-                                                <td>3003</td>
-                                                <td>1020</td>
-                                                <td>1</td>
-                                                <td>22.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1002</td>
-                                                <td>3002</td>
-                                                <td>2040</td>
-                                                <td>1</td>
-                                                <td>2.11.2022</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="card card-plain table-plain-bg">
-                                <div class="card-header ">
-                                    <h4 class="card-title">Electronic Supplies</h4>
-                                    <p class="card-category">IDs and what they are equivalent to</p>
-                                </div>
-                                <div class="card-body table-full-width table-responsive">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <th>ID</th>
-                                            <th>Name</th>          
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>3001</td>
-                                                <td>Toast Machine</td>
-                                               
-                                            </tr>
-                                            <tr>
-                                                <td>3002</td>
-                                                <td>Cleaning Machine</td>
-                                                
-                                            </tr>
-                                            <tr>
-                                                <td>3003</td>
-                                                <td>Coffee Machine</td>
-                                              
-                                            </tr>  
+                                                <td> {{electronicSupplies.buyerElectronicSupplies}} </td>
+                                                <td> {{electronicSupplies.nameElectronicSupplies}} </td>
+                                                <td> {{electronicSupplies.quantityElectronicSupplies}} </td>
+                                                <td> {{electronicSupplies.priceElectronicSupplies}} </td>
+                                                <td> {{electronicSupplies.buyDateElectronicSupplies}} </td>
+                                            </tr>    
+                                             {% endfor %}
+
                                         </tbody>
                                     </table>
                                 </div>
