--- a/asmapp/asm/templates/asm/foodSupplies.html
+++ b/asmapp/asm/templates/asm/foodSupplies.html
@@ -40,7 +40,7 @@ Gökmen Soysal Family Health Center Project
                          </a>
                      </li>
                      <li>
-                         <a class="nav-link" href="{% url 'MedicalSupplies' %}">
+                         <a class="nav-link" href="{% url 'medicalSupplies' %}">
                              <i class="nc-icon nc-notes"></i>
                              <p>Medical Supplies</p>
                          </a>
@@ -86,109 +86,32 @@ Gökmen Soysal Family Health Center Project
                         <div class="col-md-12">
                             <div class="card strpied-tabled-with-hover">
                                 <div class="card-header ">
-                                    <h4 class="card-title">Expenses of Food Supplies </h4>
+                                    <h4 class="card-title">Expenses and Quantity of Food Supplies </h4>
                                     <p class="card-category">Expenses of doctors in registered ASM</p>
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
                                     <table class="table table-hover table-striped">
                                         <thead>
-                                            <th>Buyer ID</th>
-                                            <th>Supply ID</th>
-                                            <th>Cost</th>
+                                            <th>Buyer</th>
+                                            <th>Supply Name</th>
                                             <th>Quantity</th>
-                                            <th>Date of Purchase</th>
+                                            <th>Total Price</th>
+                                            <th>Purchase Date</th>
+                                            <th>Expiration Date</th>
                                         </thead>
                                         <tbody>
+
+                                            {% for foodSupplies in foodSupplies %}
                                             <tr>
-                                                <td>1001</td>
-                                                <td>5001</td>
-                                                <td>100</td>
-                                                <td>5</td>
-                                                <td>11.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1004</td>
-                                                <td>5005</td>
-                                                <td>150</td>
-                                                <td>7</td>
-                                                <td>9.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1002</td>
-                                                <td>5004</td>
-                                                <td>100</td>
-                                                <td>4</td>
-                                                <td>16.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1003</td>
-                                                <td>5002</td>
-                                                <td>125</td>
-                                                <td>3</td>
-                                                <td>21.11.2022</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1005</td>
-                                                <td>5003</td>
-                                                <td>85</td>
-                                                <td>10</td>
-                                                <td>27.11.2022</td>
-                                            </tr> 
-                                            <tr>
-                                                <td>1001</td>
-                                                <td>5006</td>
-                                                <td>365</td>
-                                                <td>5</td>
-                                                <td>27.11.2022</td>
-                                            </tr> 
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="card card-plain table-plain-bg">
-                                <div class="card-header ">
-                                    <h4 class="card-title">Food Supplies</h4>
-                                    <p class="card-category">IDs and what they are equivalent to</p>
-                                </div>
-                                <div class="card-body table-full-width table-responsive">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <th>ID</th>
-                                            <th>Name</th>          
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>5001</td>
-                                                <td>Tea</td>
-                                               
-                                            </tr>
-                                            <tr>
-                                                <td>5002</td>
-                                                <td>Coffee</td>
-                                                
-                                            </tr>
-                                            <tr>
-                                                <td>5003</td>
-                                                <td>Pasta</td>
-                                              
-                                            </tr>
-                                            <tr>
-                                                <td>5004</td>
-                                                <td>Sugar</td>
-                                              
-                                            </tr>
-                                            <tr>
-                                                <td>5005</td>
-                                                <td>Baked Goods</td>
-                                               
-                                            </tr>   
-                                            <tr>
-                                                <td>5006</td>
-                                                <td>Cheese</td>
-                                               
-                                            </tr> 
+                                                <td> {{foodSupplies.buyerFoodSupplies}} </td>
+                                                <td> {{foodSupplies.nameFoodSupplies}} </td>
+                                                <td> {{foodSupplies.quantityFoodSupplies}} </td>
+                                                <td> {{foodSupplies.priceFoodSupplies}} </td>
+                                                <td> {{foodSupplies.buyDateFoodSupplies}} </td>
+                                                <td> {{foodSupplies.expirationFoodSupplies}} </td>
+                                            </tr>    
+                                             {% endfor %}
+
                                         </tbody>
                                     </table>
                                 </div>
